--- a/custom.scss
+++ b/custom.scss
@@ -1,5 +1,6 @@
 $primary: #14213D;
 $secondary: #D62828;
+$font-family-base: 'montserrat', sans-serif;
 
 
 @import '~bootstrap/scss/bootstrap.scss';
